# WORLDSOILS

./: .gitattributes  .gitignore  .travis.yml  README.md  cluster_input_v2.txt  environment.yml  pyproject.toml  readme_data_partition_20201130.docx  requirements.txt  setup.py  ~$adme_data_partition_20201130.docx
data/: clhs_brazilian.csv  clhs_lucas15.csv
data/bssl/: CHIME_resampled_bssl.csv  EnMAP_resampled_bssl.csv  L8_resampled_bssl.csv  S2a_resampled_bssl.csv  S2b_resampled_bssl.csv
data/lucas15/: CHIME_lucas15_merged_clean.csv  CHIME_merged_lucas15.csv  CHIME_resampled_lucas15.csv  EnMAP_lucas15_merged_clean.csv  EnMAP_merged_lucas15.csv  EnMAP_resampled_lucas15.csv  L8_lucas15_merged_clean.csv  L8_merged_lucas15.csv  L8_resampled_lucas15.csv  S2a_lucas15_merged.csv  S2a_lucas15_merged_clean.csv  S2a_resampled_lucas15.csv  S2b_lucas15_merged_clean.csv  S2b_merged_lucas15.csv  S2b_resampled_lucas15.csv
src/: LUCAS15_analysis.py  fnn.py  fnn_v2.py  merging_data.py  metrics.py  outlier_finder.py  preProcessing.py  submitJob_2.sh  submitJob_3.sh  submitJobs.sh  test.py  test_data.ipynb  version.py
src/GFZ cluster/: cluster_input.txt  submitJob.sh  submitJob_2.sh  submitJob_3.sh  submitJobs.sh
test/: test_data_type.py
