[tool.poetry]
name = "worldsoils"
version = "v0.1-beta.6"
description = "WORLDSOILS-FNN"
authors = ["M. Saberioon <saberioon@gfz-potsdam.de>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "~1.19.4"
scipy = "1.5.4"
pandas = "~1.1.5"
keras = "2.3.1"
Markdown = "3.3.1"
matplotlib = "~3.3.3"
scikit-learn = "0.23.2"
tensorflow= "1.14.0"
#tensorflow-base= "1.14.0"
tensorboard = "1.14.0"
Keras-Preprocessing = "1.1.0"
pip = "^21.2.1"
joblib = "~1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
